--- a/src/components/Accounts/Accounts.css
+++ b/src/components/Accounts/Accounts.css
@@ -1,6 +1,45 @@
-input {
+.accounts-container {
+	padding: 0 ;
+	margin: 0 ;
+}
+
+.show-add-list-wrapper {
+	width: 36%;
+	height: auto;
+	padding: 0;
+	margin-top: 3%;
+	margin-left: 12%;
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 8px;
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+}
+
+.show-add-list {
+	display: flex;
+	align-items: center;
+	padding: 3%;
+	margin-left: 4%;
+	background-color: rgba(255, 255, 255,0);
 	outline: none;
 }
+
+.add-list-img {
+	width: 14px;
+	height: auto;
+	margin: 0;
+	padding: 0;
+}
+
+.show-add-list-text {
+	font-weight: 800;
+	font-size: 17px;
+	font-family: "Ubuntu";
+	line-height: 20px;
+	letter-spacing: 0.8px;
+	color: rgba(232,232,232, 1);
+	margin-left: 15px;
+}
+
 
 .account-table {
 	width: 36%;
@@ -8,73 +47,44 @@ input {
 	padding: 0;
 	margin-top: 3%;
 	margin-left: 12%;
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: rgba(255, 255, 255, 0.2);
 	border-radius: 20px;
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
 }
 
 .scroll-account-list {
-	padding: 7% 6% 6% 6%;
-	height: 75%;
+	padding: 7% 6% 0% 6%;
 }
 
 .account-list {
 	margin: 0;
 	padding: 0;
 	width: 98%;
-	max-height: 538px;
+	max-height: 400px;
 }
 
-.account-list-item {
-	margin-bottom: 6px;
-	padding: 3%;
-	border-radius: 6px;
-	background-color: rgba(249, 249, 253,1 );
-	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
+.show-add-account-list {
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
-}
-
-.account-list li span {
-	margin: 2px 10px;
-	padding: 0;
-	font-size: 16px;
-	letter-spacing: 0.5px;
-	line-height: 20px;
-}
-
-.list-item-category {
-	color: rgba(62,62,62,1);
-	font-weight: 600;
-}
-
-.list-item-detail {
-	color: rgba(113, 113, 113, 1);
-	font-weight: 400;
-	border: none;
-	font-size: 16px;
-	width: 75%;
-	background-color: rgba(249, 249, 253,1 );
-}
-
-.list-item-amount {
-	color: rgba(113, 113, 113, 1);
+	padding: 3.5% 3% 5% 3%;
+	margin: 0;
+	background-color: rgba(255, 255, 255,0);
+	outline: none;
 }
 
 .add-account-list {
 	margin: 0;
-	padding: 2% 6% 6% 6%;
-	width: 86%;
+	padding: 2% 0% 6% 0%;
+	width: 98%;
 	display: flex;
 }
 
 .account-category {
-	width: 16%;
-	margin: 5px 5px 5px 0;
-	padding: 5px 15px;
+	width: 10%;
+	margin: 6px 5px 6px 0;
+	padding: 0 2%;
 	background-color: rgba(249,249,253,1);
-	border: 1px solid rgba(90, 215, 235, 1);
+	border: 0px;
 	border-radius: 6px;
 	display: flex;
 	align-items: center;
@@ -101,7 +111,7 @@ input {
 .account-category-selector-icon img {
 	padding: 0;
 	margin: 5px 0 0 0;
-	width: 10px;
+	width: 12px;
 }
 
 .add-list-input-group {
@@ -111,13 +121,10 @@ input {
 
 .input-list-detail, .input-list-amount {
 	font-weight: 500;
-	font-size: 18px;
-	font-weight: 500;
-	line-height: 20px;
-	color: rgba(255,255,255,0.9);
+	font-size: 16px;
 	color: rgba(62,62,62, 0.9);
 	margin: 5px 2px;
-	padding: 2%;
+	padding: 1.8%;
 	width: 28%;
 	background-color: rgba(0, 0, 0,0.1);
 	outline: none;
@@ -138,20 +145,19 @@ input {
 
 .input-list-submit {
 	font-weight: 500;
-	font-size: 16px;
-	letter-spacing: 2px;
-	line-height: 20px;
+	font-size: 15px;
+	letter-spacing: 1px;
 	width: 20%;
-	margin: 5px 0 5px 5px;
-	padding: 2%;
+	margin: 6px 0 6px 5px;
+	padding: 1%;
 	color: rgba(249,249,253,1);
-	background-color: rgba(90, 215, 235, 1);
-	border: 1px solid rgba(90, 215, 235, 1);
+	background-color: rgba(50, 216, 220, 1);
+	border: 0px;
 	border-radius: 4px;
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+	cursor: pointer;
 }
 
-.account-list-submit:hover {
-	background-color: rgba(90, 215, 210, 1);
-	box-shadow: 3px 8px 10px 0px rgba(0,0,0, 0.1);
+.input-list-submit:hover {
+	background-color: rgba(60, 210, 220, 1);
 }
