--- a/src/components/Accounts/List.css
+++ b/src/components/Accounts/List.css
@@ -1,6 +1,6 @@
 .account-list-item {
-	margin-bottom: 6px;
-	padding: 3%;
+	margin-bottom: 1%;
+	padding: 1.8%;
 	border-radius: 6px;
 	background-color: rgba(249, 249, 253,1 );
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
@@ -9,28 +9,36 @@
 	align-items: center;
 }
 
-.account-list li span {
-	margin: 2px 10px;
+.list-item-delete-btn {
+	background: none;
+	margin: 0 5px;
+	outline: none;
+}
+
+.list-item-delete-btn img {
 	padding: 0;
-	font-size: 16px;
-	letter-spacing: 0.5px;
-	line-height: 20px;
+	margin: 5px 0 0 5px;
+	width: 10px;
 }
 
 .list-item-category {
 	color: rgba(62,62,62,1);
-	font-weight: 600;
+	font-weight: 500;
+	font-size: 16px;
+	margin-left: 20px;
 }
 
 .list-item-detail {
 	color: rgba(113, 113, 113, 1);
-	font-weight: 400;
-	border: none;
+	font-weight: 500;
 	font-size: 16px;
 	width: 75%;
-	background-color: rgba(249, 249, 253,1 );
+	margin-left: 20px;
 }
 
 .list-item-amount {
 	color: rgba(113, 113, 113, 1);
+	font-weight: 500;
+	font-size: 16px;
+	margin-right: 20px;
 }
