--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -3,49 +3,125 @@
 	width: 230px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 100;
 	top: 0;
 	left: 0;
 	overflow-x: hidden;
 	margin: 0;
 	padding-top: 60px;
 }
+
 .journey-list {
 	width: 90%;
 	height: auto;
-	margin: 0 20px;
+	margin-left: 5px;
 	padding: 0; 	
 }
 
-.journey-list-item {
-	width: 100%;
-	font-size: 16px;
-	color: rgba(62, 62, 62, 1);
-	font-weight: 400;
-	margin: 28px 0;
-	letter-spacing: 0.6px;
-}
-
-.add-journey-btn button {
-	width: 90%;
+.add-journey-wrapper {
 	display: flex;
 	align-items: center;
-	justify-content: flex-start;
-	margin: 45px 20px;
-	padding: 0;
-	background-color: rgba(231, 231, 240, 0);  
+	margin: 20px 0;
+	padding: 4%;
 }
 
-.add-journey-btn img {
+.show-add-journey {
+	display: flex;
+	align-items: center;
+	padding: 2%;
+	background-color: rgba(255, 255, 255,0);
+	outline: none;
+}
+
+.add-journey-img {
 	width: auto;
 	height: auto;
 	margin: 0;
 	padding: 0;
 }
 
-.add-journey-btn p {	
-	color: rgba(113, 113, 113, 1);
-	font-weight: 600;
-	font-size: 15px;
+.show-add-journey-text {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: rgba(62,62,62, 0.8);
 }
 
+.add-journey {
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+	padding: 2%;
+	width: 100%;
+}
+
+.input-journey {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: rgba(62,62,62, 0.8);
+	border-radius: 6px;
+	border: 2px solid rgba(70, 210, 235, 0);
+	padding: 3%;
+	margin-right: 5px;
+	background-color: rgba(0, 0, 0,0.1);
+	outline: none;
+}
+
+.input-journey::placeholder {
+	color: rgba(62,62,62, 0.5);
+	font-weight: 500;
+	letter-spacing: 0.5px;
+}
+
+.input-journey:focus {
+	background-color: rgba(0, 0, 0,0.1);
+	background-color: rgba(231, 231, 240, 100);
+}
+
+.submit-new-journey {
+	display: flex;
+	align-items: center;
+	padding: 0;
+	margin: 0;
+}
+
+.input-new-journey {
+	font-weight: 500;
+	font-size: 15px;
+	letter-spacing: 1px;
+	margin-right: 10px;
+	padding: 3px 6px;
+	width: 40%;
+	color: rgba(249,249,253,1);
+	background-color: rgba( 0, 172, 238, 1);
+	border: 0px;
+	border-radius: 4px;
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+	cursor: pointer;
+}
+
+.input-new-journey:hover {
+	background-color: rgba( 0, 160, 220, 1);
+}
+
+.cancel-new-submit {
+	font-weight: 500;
+	font-size: 15px;
+	letter-spacing: 1px;
+	margin: 10px 0;
+	padding: 3px 6px;
+	width: 40%;
+	color: rgba(249,249,253,1);
+	background-color: rgba( 62, 62, 62, 0.4);
+	border: 0px;
+	border-radius: 4px;
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+	cursor: pointer;
+}
+
+.cancel-new-submit:hover {
+	background-color: rgba( 62, 62, 62, 0.5);
+}
