--- a/src/components/Accounts/Accounts.css
+++ b/src/components/Accounts/Accounts.css
@@ -77,10 +77,18 @@
 	padding: 2% 0% 6% 0%;
 	width: 98%;
 	display: flex;
+	flex-direction: column;
+}
+
+.add-account-list-content {
+	margin-top: 10px;
+	padding: 0;
+	width: 100%;
+	display: flex;
 }
 
 .account-category {
-	width: 10%;
+	width: 16%;
 	margin: 6px 5px 6px 0;
 	padding: 0 2%;
 	background-color: rgba(249,249,253,1);
@@ -125,7 +133,7 @@
 	color: rgba(62,62,62, 0.9);
 	margin: 5px 2px;
 	padding: 1.8%;
-	width: 28%;
+	width: 40%;
 	background-color: rgba(0, 0, 0,0.1);
 	outline: none;
 	border: 2px solid rgba(70, 210, 235, 0);
@@ -140,7 +148,15 @@
 
 .input-list-detail:focus, .input-list-amount:focus {
 	background-color: rgba(0, 0, 0,0.02);
-	border: 2px solid rgba(70, 210, 235, 1);
+	border: 2px solid rgba(40, 215, 194, 1);
+}
+
+.input-list-submit-group {
+	margin-top: 10px;
+	padding: 0;
+	width: 100%;
+	display: flex;
+	align-items: center;
 }
 
 .input-list-submit {
@@ -148,16 +164,44 @@
 	font-size: 15px;
 	letter-spacing: 1px;
 	width: 20%;
-	margin: 6px 0 6px 5px;
-	padding: 1%;
+	margin: 0;
+	padding: 1.6%;
 	color: rgba(249,249,253,1);
-	background-color: rgba(50, 216, 220, 1);
+	background-color: rgba(40, 215, 194, 1);
 	border: 0px;
-	border-radius: 4px;
-	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+	border-radius: 6px;
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
 	cursor: pointer;
 }
 
 .input-list-submit:hover {
-	background-color: rgba(60, 210, 220, 1);
+	background-color: rgba(40, 200, 190, 1);
+}
+
+.cancel-input-list-btn {
+	margin: 2px 0 0 20px;
+	width: auto;
+	cursor: pointer;
+	outline: none;
+	background-color: rgba( 197, 199, 212, 0);
+}
+
+.cancel-btn-img {
+	width: 16px;
+}
+
+/*.cancel-input-list-submit {
+	width: 20%;
+	margin-right: 12px;
+	padding: 1.6%;
+	background-color: rgba( 197, 199, 212, 1);
+	border: 0px;
+	border-radius: 6px;
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
+	cursor: pointer;
+	outline: none;
+}*/
+
+.cancel-input-list-submit:hover {
+	background-color: rgba( 180, 189, 210, 1);
 }
