--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,44 @@
-.app {
+.app, .home {
+	height: 100%;
 	padding: 0;
 	margin: 0;
 }
 
 .container {
+	margin: 0;
+	padding: 0;
+	height: 100%;
 	width: 100%;
-	height: 1200px;
 	display: flex;
-	flex-direction: column;
+}
+
+.side-bar {
+	margin: 0;
+	padding: 0;
+	width: 18%;
+	height: 100%;
+	background-color: rgba(255,255,255,1);
+}
+
+.section {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 .control-pannel {
+	margin: 0;
+	padding: 0;
+	height: 360px;
 	background-color: rgba(250,190, 220, 1);
-	width: 100%;
-	height: 38%;
-	box-shadow: 0 5px 10px 0px rgba(0,0,0, 0.1);
-	z-index: 1;
 }
   
-.section {
-	/* */
+.dashboard {
 	background-color: rgba(82, 145, 230, 1);
-	width: 100%;
-	height: 62%;
+	margin: 0;
+	padding: 0;
+	height: 80%;
+	display: flex;
+	justify-content: space-around;
 }
