--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,23 +3,23 @@ header {
 	left: 0;
 	top: 0;
 	width: 100%;
-	z-index: 101;
 	background-color: #fff;
-}
-nav {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	height: auto;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	box-shadow:0 4px 8px 0 rgba(0,0,0, 0.1);
 }
 
+.navigation-nav {
+	padding: 10px 0;
+	margin: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 p {
-	font-weight: 600;
 	font-family: 'Roboto';
+	font-weight: 600;
+	letter-spacing: 0.1px;
 }
 
 .slogan {
@@ -35,22 +35,41 @@ p {
 
 .user-display {
 	padding: 0;
-	margin: 2px 0;
+	margin: 0;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 }
 
-.user-welcome-words {
+.user-signout {
+  font-size: 15px;
+  color: rgba(62, 62, 62, 1);
+  margin: 2px 15px 0 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+.user-signout:hover {
+	color: rgba(62, 62, 62, 0.7);;
+}
+
+.user-name-words {
 	font-size: 16px;
 	color: rgba(62, 62, 62, 1);
-	margin: 15px;
+	margin-left: 2px;
+}
+
+.seperate-line {
+  width: auto;
+  height: 15px;
+  margin: 2px 10px 0 10px;
+  padding: 0;
 }
 
 .user-profile-picture {
 	background-color: rgba(232, 232, 232, 1);
-	width: 41px;
-	height: 41px;
+	width: 38px;
+	height: 38px;
 	border-radius: 20px;
-	margin-right: 18px;
+	margin-right: 5px;
 }
