--- a/src/components/SetBudget/SetBudget.css
+++ b/src/components/SetBudget/SetBudget.css
@@ -1,12 +1,14 @@
+.setting-control-wrapper {
+	margin: 0;
+	padding: 80px;
+}
+
 .setting-control {
-	width: 70%;
-	height: auto;
-	padding: 2% 3%;
-	margin-top: 120px;
-	margin-left: 12%;
+	padding: 2% 5%;
+	margin: 0;
 	background-color: rgba(255, 255, 255, 1);
 	border-radius: 20px;
-	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
 }
 
 .setting-control-title {
