--- a/src/components/SideBar/Journey.css
+++ b/src/components/SideBar/Journey.css
@@ -1,26 +1,28 @@
 .journey {
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	width: 100%;
-	margin: 5px 0;
-	padding: 2%;
+	margin: 10px 10px;
+	padding: 10px 0 10px 5px;
+	border-radius: 10px; 
+	box-shadow: 0px 5px 10px 0px rgba(0,0,0, 0.05);
+	cursor: pointer;
 }
 
 .journey-delete-btn {
 	background: none;
-	margin: 0 5px;
+	outline: none;
 }
 
 .journey-delete-btn img {
 	padding: 0;
-	margin: 5px 0 0 0;
-	width: 10px;
+	margin: 8px 0 0 0;
+	width: 8px;
 }
 
 .journey-content {
 	font-size: 16px;
-	font-weight: 500;
-	color: rgba(62, 62, 62, 1);
-	margin: 0px 10px;
+	color: rgba(70, 70, 70, 1);
+	margin: 0px 15px;
 	letter-spacing: 0.6px;
 }
