--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,39 +1,39 @@
-.sidenav {
-	background-color: rgba(249, 249, 253, 1);
-	width: 230px;
-	height: 100%;
-	position: fixed;
-	z-index: 100;
-	top: 0;
-	left: 0;
-	overflow-x: hidden;
+.side-bar-container {
 	margin: 0;
-	padding-top: 60px;
+	padding: 0;
 }
 
-.journey-list {
+.journeys-list-container {
+	margin: 0;
+	padding-top: 60px;
+	width: 100%;
+	height: 100%;
+}
+
+.journeys-list {
 	width: 90%;
 	height: auto;
-	margin-left: 5px;
-	padding: 0; 	
+	margin: 0 10px;
+	padding: 0; 
 }
 
 .add-journey-wrapper {
 	display: flex;
 	align-items: center;
-	margin: 20px 0;
-	padding: 4%;
+	margin: 10px 15px;
+	width: 90%;
+	padding: 2%;
 }
 
-.show-add-journey {
+.show-add-journey-btn {
 	display: flex;
 	align-items: center;
-	padding: 2%;
+	padding: 0;
 	background-color: rgba(255, 255, 255,0);
 	outline: none;
 }
 
-.add-journey-img {
+.show-add-journey-img {
 	width: auto;
 	height: auto;
 	margin: 0;
@@ -48,15 +48,16 @@
 	color: rgba(62,62,62, 0.8);
 }
 
-.add-journey {
+.add-new-journey {
 	display: flex;
 	flex-direction: column;
 	align-items: left;
-	padding: 2%;
-	width: 100%;
+	padding: 0;
+	width: 95%;
+	margin: 0;
 }
 
-.input-journey {
+.input-new-journey {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 20px;
@@ -70,25 +71,26 @@
 	outline: none;
 }
 
-.input-journey::placeholder {
+.input-new-journey::placeholder {
 	color: rgba(62,62,62, 0.5);
 	font-weight: 500;
 	letter-spacing: 0.5px;
 }
 
-.input-journey:focus {
+.input-new-journey:focus {
 	background-color: rgba(0, 0, 0,0.1);
 	background-color: rgba(231, 231, 240, 100);
 }
 
-.submit-new-journey {
+.submit-new-journey-group {
 	display: flex;
 	align-items: center;
+	justify-content: flex-end;
 	padding: 0;
-	margin-top: 15px;
+	margin-top: 10px;
 }
 
-.input-new-journey {
+.submit-new-journey {
 	font-weight: 500;
 	font-size: 15px;
 	letter-spacing: 1px;
@@ -96,19 +98,21 @@
 	padding: 3px 6px;
 	width: 40%;
 	color: rgba(249,249,253,1);
-	background-color: rgba( 0, 172, 238, 1);
+	background-color: rgba(40, 215, 194, 1);
+	/*background-color: rgba( 0, 172, 238, 1);*/
 	border: 0px;
 	border-radius: 6px;
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
 	cursor: pointer;
 }
 
-.input-new-journey:hover {
-	background-color: rgba( 0, 160, 220, 1);
+.submit-new-journey:hover {
+	/*background-color: rgba( 0, 160, 220, 1);*/
+	background-color: rgba(40, 200, 190, 1);
 }
 
 .cancel-new-submit-btn {
-	margin: 4px 0 0 2px;
+	margin: 4px 10px 0 2px;
 	width: auto;
 	cursor: pointer;
 	outline: none;
