--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
 
+html, #root {
+  height: 100%;
+  width: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-size: 15px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Noto Sans TC",
-    sans-serif;
+    "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    'monospace';
 }
 
 p {
@@ -38,3 +44,8 @@ button {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
+
+input {
+	outline: none;
+}
+
