--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,7 +1,7 @@
 .landing-container {
   margin: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding-bottom: 20%;
   background-color: rgba(82, 154, 237,1);
 }
