--- a/src/components/Home/Accounts/Accounts.css
+++ b/src/components/Home/Accounts/Accounts.css
@@ -3,7 +3,7 @@
 	margin-top: 2%;
 	margin-left: 2%;
 	height: auto;
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: #f2f2f2;
 	border-radius: 20px;
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.08);
 }
