--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,43 +1,130 @@
-.container {
+.home-container {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
+  background-color: #f9f9f9;
   display: flex;
 }
 
 .side-bar {
   margin: 0;
   padding: 0;
-  width: 18%;
+  width: 250px;
   height: 100%;
   background-color: rgba(255,255,255,1);
 }
 
-.section {
+.main-section {
+  margin-top: 40px;
+  padding: 10px 50px;
   width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.control-pannel {
+.static-pannel-wrapper {
+  width: 80%;
+  max-width: 1048px;
+  padding: 10px;
+  margin: 15px;
+}
+
+.home-title {
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-family: "Ubuntu";
+  margin: 15px;
+  color: #3e3e3e;
+}
+
+.static-pannel {
+  margin: 0;
+  padding: 2% 1.5%;
+  background-color: #fff;
+  border: 0;
+  border-radius: 12px;
+  box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
+  display: flex;
+  justify-content: space-around;
+}
+
+.static-pannel-section {
+  width: 30%;
+  margin: 10px 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.static-pannel-topic {
+  margin-right: 25px;
+  font-family: "Ubuntu";
+  padding: 2px;
+}
+
+.static-pannel-title {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 2px;
+}
+
+.static-pannel-subtitle {
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.static-pannel-amount {
+  font-size: 24px;
+  font-weight: 300;
+  margin-top: 18px;
+  color: #3e3e3e;
+}
+
+.editable-text {
+  color: #177ef5;
+  font-weight: 400;
+}
+
+.sub-section {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.minor-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  width: 45%;
+  max-width: 600px;
+}
+
+/*.control-pannel {
   margin: 0;
   padding: 0;
   height: 360px;
   background-color: rgba(250,190, 220, 1);
-}
+}*/
   
-.dashboard {
+/*.dashboard {
   background-color: rgba(82, 145, 230, 1);
   margin: 0;
   padding: 0;
   height: 70%;
   display: flex;
   justify-content: space-around;
-}
+}*/
 
-.accounts-container {
+.accounts-section {
   width: 100%;
   height: auto;
   padding: 3.2% 4%;
@@ -127,5 +214,5 @@
 .footer {
   margin: 0;
   padding: 0;
-  background-color: rgba(82, 145, 230, 1);
+  background-color: #f9f9f9;
 }
