--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,12 +1,3 @@
-header {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	background-color: #fff;
-	box-shadow:0 4px 8px 0 rgba(0,0,0, 0.1);
-}
-
 .navigation-nav {
 	padding: 10px 0;
 	margin: 0;
@@ -14,12 +5,9 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-}
-
-p {
-	font-family: 'Roboto';
-	font-weight: 600;
-	letter-spacing: 0.1px;
+  font-family: 'Roboto';
+  font-weight: 600;
+  letter-spacing: 0.1px;
 }
 
 .slogan {
@@ -30,7 +18,8 @@ p {
 
 .logo {
 	font-size: 22px;
-	color: rgba(0, 172, 238, 1);
+	color: #4a4a4a;
+  margin-right: 15px;
 }
 
 .user-display {
