--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
 
-html, #root {
+html, body, #root {
   height: 100%;
   width: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0;
   padding: 0;
+  margin: 0;
   font-size: 15px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Noto Sans TC",
     "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.1);
 }
 
 code {
