--- a/src/components/Home/SetBudget/SetBudget.css
+++ b/src/components/Home/SetBudget/SetBudget.css
@@ -19,10 +19,11 @@
 	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.1);
 }
 
-.budget-text {
+.budget-content {
 	display: flex;
 	align-items: center;
-	margin-bottom: 15px;
+	height: 27px;
+	margin-bottom: 12px;
 }
 
 .budget-control {
@@ -33,15 +34,17 @@
 .budget-topic ,.budget-amount{
 	font-size: 16px;
 	font-weight: 500;
-	margin-right: 50px;
+	letter-spacing: 0.5px;
 }
 
 .budget-topic {
 	color: #2d2d2d;
+	margin-right: 40px;
 }
 
 .budget-amount {
 	color: #177ef5;
+	margin-right: 2px;
 }
 
 .budget-detail {
@@ -54,101 +57,11 @@
 	font-size: 15px;
 	margin-right: 20px;
 }
-/*.setting-control-title {
-	font-size: 17px;
-	font-weight: 500;
-	font-family: "Ubuntu";
-	color: rgba(62, 62, 62, 1);
-	margin-bottom: 18px;
-}
 
-.setting-control-main {
-	display: flex;
-}
-
-.setting-control-container {
-	display: flex;
-	flex-direction: column;
-	margin-right: 80px;
-}
-
-.setting-control-session {
-	display: flex;
-	align-items: center;
-	margin: 7px 0;
-	padding: 0;
-}
-
-.title {
-	margin-right: 20px;
-	font-size: 16px;
-	font-weight: 500;
-	font-family: "Ubuntu";
-	color: rgba(62, 62, 62, 1);
-}
-
-.currency-category {
-	margin: 0;
-	padding: 6px;
-	width: 150px;
-	background-color: rgba( 0, 172, 238, 1);
-	border: 0px;
-	border-radius: 6px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.currency-category-selector {
-	appearance: none;
-	outline: none;
-	font-size: 15px;
-	font-weight: 500;
-	color: rgba( 255, 255, 255,1);
-	background: transparent; 
-	border: none;
-	cursor: pointer;
-	margin-left: 10px;
-}
-
-.budget-item {
+.budget-text {
 	display: flex;
 	justify-content: flex-start;
-	padding: 0;
-	margin: 0;
-	width: 160px;
-}
-
-.budget-item-text {
-	font-weight: 500;
-	font-size: 18px;
-	letter-spacing: 1px;
-	color: rgba(46, 167, 214, 1);
-	padding: 7px;
-	margin: 0;
-	cursor: pointer;
-}
-
-.balance-content {
-	font-weight: 500;
-	font-size: 18px;
-	letter-spacing: 1px;
-	color: rgba(46, 167, 214, 1);
-	padding: 7px;
-	margin: 0;
-	width: 160px;
-}
-
-.currency-category-selector-icon {
-	padding: 0;
-	margin: 0;
-	float: right;
-}
-
-.currency-category-selector-icon img {
-	padding: 0;
-	margin: 5px 10px 2px 10px;
-	width: 10px;
+	align-items: center;
 }
 
 .budget-update {
@@ -163,38 +76,37 @@
 	outline: none;
 	display: flex;
 	align-items: center;
-	margin-left:10px;
+	margin-left: 3px;
 }
 
-.cancel-btn img {
-	padding: 0;
+.cancel-icon-img {
 	margin: 0;
 	width: 10px;
 }
 
-.setting-control-session input {
+.budget-input {
 	font-weight: 500;
-	font-size: 18px;
-	letter-spacing: 1px;
+	font-size: 16px;
+	letter-spacing: 0.2px;
 	color: rgba(62, 62, 62, 0.9);
 	margin: 0;
-	padding: 5px;
-	width: 120px;
-	background-color: rgba(0, 0, 0,0.1);
+	padding: 3px 3px 3px 5px;
+	width: 70px;
+	background-color: #f0f0f0;
 	outline: none;
-	border: 2px solid rgba(70, 210, 235, 0);
-	border-radius: 6px;
+	border: 1px solid #f0f0f0;
+	border-radius: 5px;
 }
 
-.setting-control-session input::placeholder {
-	color: rgba(255,255,255,0.6);
+.budget-input::placeholder {
 	font-weight: 300;
 	font-size: 17px;
 	letter-spacing: 0.5px;
+	color: rgba(62, 62, 62, 0.9);
 	text-align: right;
 }
 
-.setting-control-session input:focus {
+.budget-input:focus {
 	background-color: rgba(0, 0, 0,0.02);
-	border: 2px solid rgba(70, 210, 235, 1);
-}*/
+	border: 1px solid #50e3c2;
+}
