--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -33,6 +33,15 @@
   color: #3e3e3e;
 }
 
+.home-subtitle {
+  font-weight: 600;
+  font-size: 15px;
+  font-family: "Ubuntu";
+  margin: 12px 15px;
+  color: #3e3e3e;
+  text-transform: capitalize;
+}
+
 .editable-text {
   color: #177ef5;
   font-weight: 400;
@@ -56,29 +65,6 @@
   max-width: 600px;
 }
 
-/*.control-pannel {
-  margin: 0;
-  padding: 0;
-  height: 360px;
-  background-color: rgba(250,190, 220, 1);
-}*/
-  
-/*.dashboard {
-  background-color: rgba(82, 145, 230, 1);
-  margin: 0;
-  padding: 0;
-  height: 70%;
-  display: flex;
-  justify-content: space-around;
-}*/
-
-/*.accounts-section {
-  width: 100%;
-  height: auto;
-  padding: 3.2% 4%;
-  margin: 0;
-}*/
-
 .accounts-wrapper {
   width: 100%;
   margin-top: 20px;
@@ -94,7 +80,15 @@
 .accounts-days-manage {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
+
+.left-column ,.right-column {
+  margin-right: 15px;
+  padding: 0;
+  display: flex;
+}
+
 
 .control-btn {
   margin: 2px 0 0 0;
@@ -104,6 +98,8 @@
   font-size: 15px;
   font-weight: 500;
   color: #9b9b9b;
+  border: 0;
+  border-radius: 8px;
 }
 
 .control-btn:hover {
@@ -137,7 +133,6 @@
   border-radius: 10px 10px 0 0;
   display: flex;
   align-items: center;
-  /*box-shadow: 3px 0px 4px 0px rgba(0,0,0, 0.1);*/
 }
 
 .accounts-day-selector {
