--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,12 +7,18 @@
   display: flex;
 }
 
+.home-container button {
+  outline: none;
+  cursor: pointer;
+  border: 0;
+}
+
 .side-bar {
   margin: 0;
   padding: 0;
   width: 250px;
   height: 100%;
-  background-color: rgba(255,255,255,1);
+  background-color: #FFF;
 }
 
 .main-section {
@@ -30,7 +36,7 @@
   letter-spacing: 1px;
   font-family: "Ubuntu";
   margin: 12px 15px;
-  color: #3e3e3e;
+  color: #3E3E3E;
 }
 
 .home-subtitle {
@@ -38,20 +44,18 @@
   font-size: 15px;
   font-family: "Ubuntu";
   margin: 12px 15px;
-  color: #3e3e3e;
+  color: #3E3E3E;
   text-transform: capitalize;
 }
 
 .editable-text {
-  color: #177ef5;
+  color: #177EF5;
   font-weight: 400;
 }
 
 .sub-section {
   display: flex;
   justify-content: center;
-  margin: 0;
-  padding: 0;
   width: 100%;
 }
 
@@ -59,8 +63,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
-  padding: 0;
   width: 45%;
   max-width: 600px;
 }
@@ -68,7 +70,6 @@
 .accounts-wrapper {
   width: 100%;
   margin-top: 20px;
-  padding: 0;
 }
 
 .accounts-nav {
@@ -85,42 +86,50 @@
 
 .left-column ,.right-column {
   margin-right: 15px;
-  padding: 0;
   display: flex;
 }
 
+.delete-day, .add-day {
+  margin: 2px 0 0 5px;
+  padding: 2px 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-btn {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: rgba( 62, 62, 62,1);
+  background: none;
+}
+
+.delete-btn:hover {
+  color: #177EF5;
+}
 
 .control-btn {
-  margin: 2px 0 0 0;
   padding: 2px 3px;
-  outline: none;
   background: none;
   font-size: 15px;
   font-weight: 500;
-  color: #9b9b9b;
-  border: 0;
+  color: #9B9B9B;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .control-btn:hover {
   background-color: #E7E7E7;
-  border: 0;
-  border-radius: 8px;
-  color: #177ef5;
+  color: #177EF5;
 }
 
-.add-icon-img ,.delete-icon-img, .select-icon-img{
-  width: 10px;
-  height: auto;
-  margin: 0 2px;
-  padding: 0;
-}
-
+.add-icon-img, .select-icon-img,
 .update-icon-img {
-  width: 12px;
-  height: auto;
+  width: 10px;
   margin: 0 5px;
-  padding: 0;
 }
 
 .accounts-days {
@@ -128,7 +137,7 @@
   height: 48px;
   margin: 0 15px;
   padding: 0 15px;
-  background-color: #f1f1f1;
+  background-color: #F1F1F1;
   border: 0px;
   border-radius: 10px 10px 0 0;
   display: flex;
@@ -140,7 +149,7 @@
   outline: none;
   font-size: 15px;
   font-weight: 600;
-  color: #4a4a4a;
+  color: #4A4A4A;
   letter-spacing: 3px;
   background: transparent; 
   border: none;
@@ -153,12 +162,9 @@
   color: rgba( 62, 62, 62,1);
   font-size: 13px;
   letter-spacing: 2px;
-  margin: 0;
   padding: 0 0 4% 5%;
 }
 
 .footer {
-  margin: 0;
-  padding: 0;
   background-color: #f9f9f9;
 }
